tests/compile-fail/generated/derives-span-Debug-struct.stderr
error[E0277]: `Error` doesn't implement `std::fmt::Debug`
  --> $DIR/derives-span-Debug-struct.rs:15:5
   |
15 |     x: Error
   |     ^ `Error` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `Error`
   = note: add `#[derive(Debug)]` or manually implement `std::fmt::Debug`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `&Error`
   = note: required for the cast to the object type `dyn std::fmt::Debug`
